<resources>
    <string name="app_name">Branch Chat</string>

    <string name="button_onboarding_next">Next</string>
    <string name="button_onboarding_prev">Prev</string>

    <string name="button_auth_login">Login</string>

    <string name="onboarding_support_title">Support on Mobile</string>
    <string name="onboarding_support_description">Easily and conveniently reply to Branch chats on the fly using your Mobile App</string>

    <string name="hint_enter_your_username">Enter Your Username</string>
    <string name="hint_enter_your_pin">Enter Your PIN</string>

    <string name="chat_open">open</string>
    <string name="chat_closed">closed</string>
    <string name="send_message">SEND</string>
    <string name="chat_enter_message">Enter message...</string>
    <string name="button_auth_issue">Need Help?</string>
    <string name="powered_by">Branch International</string>
    <string name="report_issue">Report Issue</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="welcome_username">Hi Juma Allan</string>
    <string name="settings_tos">Terms of Service</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign Out</string>

    <string name="text_sign_in_advantages">
        When signed in:
        \n\n&#8226; Your can get message notifications on the go.
        \n\n&#8226; App preferences will be persisted across app installs.
    </string>
    <string name="close_thread">Close</string>

</resources>
