<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.views.OnboardingActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_onboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="1"
        tools:listitem="@layout/item_on_board" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_onboard">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_onboarding_previous"
            style="@style/onboardingNavigation"
            android:text="@string/button_onboarding_prev" />

        <me.relex.circleindicator.CircleIndicator2
            android:id="@+id/indicator"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="3"
            app:ci_drawable="@drawable/onboarding_indicator_selected"
            app:ci_drawable_unselected="@drawable/onboarding_indicator_unselected"
            app:ci_height="10dp"
            app:ci_width="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_onboarding_next"
            style="@style/onboardingNavigation"
            android:text="@string/button_onboarding_next" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            style="@style/buttonAuthLogin"
            android:onClick="openLoginScreen"
            android:text="@string/button_auth_login" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
